--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
 
     <main class="container">
-      <h1>Welcome to my Just-the-Docs site!</h1>
-      <p>This is the home page of my site. You can edit this file to customize the content and layout of your site.</p>
+      <h1>정보 공유합니다</h1>
+      <p>안녕하세요 </p>
     </main>
 
     <footer class="site-footer">
